# dotfiles

./: .Xresources  .bashrc  .fzf.zsh  .gitconfig  .gitignore  .gitmodules  .inputrc  .lesshst  .profile  .python_history  .tmux.conf  .warprc  .xinputrc  README.md  install.sh
.config/: .gitconfig  .latexmkrc  QtProject.conf  Trolltech.conf  mimeapps.list  monitors.xml  monitors.xml~  oh-my-zsh  output.txt  pavucontrol.ini  zoomus.conf
.config/Autodesk/: EAGLE 9.6.2.conf
.config/Clementine/: Clementine.conf  clementine.db  clementine.db.bak
.config/Code/: Cookies  Network Persistent State  machineid  storage.json
.config/GitKraken/: Cookies  Network Persistent State  Origin Bound Certs
.config/Kitware/: CMakeSetup.conf
.config/Ovito/: Ovito.conf
.config/QGroundControl.org/: PX4AirframeFactMetaData.xml  ParameterFactMetaData.12.1.xml  ParameterFactMetaData.xml  QGroundControl.ini
.config/Qt/: Qt Apps.conf
.config/QtProject/: Designer.conf  Linguist.conf  QtCreator.db  QtCreator.ini
.config/ReText project/: ReText.conf
.config/Slack/: .org.chromium.Chromium.Z2oool  Network Persistent State  QuotaManager  QuotaManager-journal  SS  SingletonLock  TransportSecurity  installation
.config/TabNine/: data.tabnine  tabnine_config.json
.config/Unknown Organization/: zoom.conf
.config/VirtualBox/: VBoxSVC.log.1  VBoxSVC.log.2  VBoxSVC.log.3  VBoxSVC.log.4  VBoxSVC.log.5  VBoxSVC.log.6  VBoxSVC.log.7  VirtualBox.xml  VirtualBox.xml-prev  (+10 more)
.data/nvim/: pyproject.toml
.fonts/: .uuid
.synaptic/: synaptic.conf
.tmux/: default
.todo/: config
(+1034 files in other folders)
