[project]
name = "nvim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "jupyter-client>=8.6.3",
    "kaleido>=1.0.0rc0",
    "nbformat>=5.10.4",
    "pillow>=11.0.0",
    "plotly>=5.24.1",
    "pnglatex>=1.1",
    "pynvim>=0.5.2",
    "pyperclip>=1.9.0",
    "requests>=2.32.3",
]
